tests/sqlcmd/baselines/errors/load_classes6.outbaseline

LOAD CLASSES sqlcmdtest.py;
Command succeeded.
